--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,20 @@
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/css/lightbox.min.css" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/js/lightbox-plus-jquery.min.js"></script>
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+  
+    <script src="https://unpkg.com/web-animations-js@2.3.1/web-animations.min.js"></script>
+    <script src="https://unpkg.com/muuri@0.7.1/dist/muuri.min.js"></script>
+    
+    <script src="/assets/stlview/stats.js"></script>
+    <script src="/assets/stlview/detector.js"></script>
+    <script src="/assets/stlview/three.min.js"></script>
+    <script src="/assets/stlview/Madeleine.js"></script>
   </head>
 
   <body>
